--- a/index2.html
+++ b/index2.html
@@ -24,12 +24,12 @@
         <img src="images/pic.jpg" alt="...">
         <p class="textinbox">Weekly Planner</p>
     </div>
-    <div class="container row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mx-2 my-2 gap-2 justify-content-between pb-2" id="me_tasks">
+    <div class="container row row-cols-3 mx-2 my-2 gap-2 justify-content-between pb-2" id="me_tasks0">
 
             
     </div>
 
-    <script src="js/cr2.js"></script>
+    <script src="js/cr22.js"></script>
     <script src="https://cdn.jsdeavr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
