correct rows and a bit design changes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         <img src="images/pic.jpg" alt="...">
         <p class="textinbox">Weekly Planner</p>
     </div>
-    <div class="container row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mx-2 my-2 gap-2 justify-content-between pb-2" id="me_tasks">
+    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 g-4 mt-2 mx-2 pb-2" id="me_tasks">
+       <!-- <div class="container row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mx-2 my-2 gap-2 justify-content-between pb-2" id="me_tasks"> -->
 
             
     </div>
